Bump down startbootstrap-sb-admin-2 to 3.3.7+1