@@ -88,7 +88,7 @@ dependencies {
     implementation 'org.webjars:jquery:3.6.3'
     implementation 'org.webjars:webjars-locator:0.52'
 
-    implementation 'org.webjars:startbootstrap-sb-admin-2:4.1.3'
+    implementation 'org.webjars:startbootstrap-sb-admin-2:3.3.7+1'
     implementation 'org.webjars:html5shiv:3.7.3-1'
     implementation 'org.webjars:respond:1.4.2-1'
     implementation 'org.webjars.npm:ev-emitter:1.1.1'
@@ -158,12 +158,13 @@ docker {
         baseImage = 'eclipse-temurin:21.0.3_9-jre-alpine'
         maintainer = 'Tomasz Dziurko "tdziurko at gmail dottt com"'
         ports = [8080, 8080]
-        jvmArgs = ['-Dwicket.ioc.useByteBuddy=true']
+        jvmArgs = ['-Dwicket.ioc.useByteBuddy=true', '--add-opens', 'java.base/java.lang=ALL-UNNAMED']
     }
 }
 
 bootRun {
     systemProperties = System.properties as Map<String, ?>
+    jvmArgs = ['--add-opens', 'java.base/java.lang=ALL-UNNAMED']
 }
 
 test {
